# redis-tagged-cache

./: .importlinter  .mergify.yml  CHANGELOG.md  Makefile  README.md  README.md.template  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: changelog.yml  ci.yml  create-release.yml
docs/: index.md
docs/howto/: .gitignore  serialization.md.template  serialization1.py  serialization2.py
docs/reference/: api.md
docs/tutorial/: high-level-example1.py  low-level-example1.py
rtc/app/: decorator.py  exc.py  hash.py  metadata.py  service.py  storage.py  types.py
rtc/infra/adapters/metadata/: blackhole.py  dict.py  redis.py
rtc/infra/adapters/storage/: dict.py  dict.py.sav  redis.py  redis.py.sav
rtc/infra/controllers/: lib.py
tests/: test_app.py  test_app.py.sav  test_lib.py  test_lib.py.sav  test_storage.py
tests/app/: test_decorator.py  test_hash.py  test_metadata_service.py  test_service.py  test_service_bad_adapter.py  test_storage_service.py
tests/infra/: metadata_adapter.py  storage_adapter.py  test_blackhole_metadata_adapter.py  test_blackhole_storage_adapter.py  test_dict_metadata_adapter.py  test_dict_storage_adapter.py  test_lib.py  test_redis_metadata_adapter.py  test_redis_storage_adapter.py
